Fixed bug with phone in form & added z-index to text element in tech specs section

--- a/src/assets/ShowSpecsButton/showSpecButton.scss
+++ b/src/assets/ShowSpecsButton/showSpecButton.scss
@@ -25,6 +25,7 @@
     min-width: 130px;
     cursor: default;
     padding: 15px;
+    z-index: 2;
     background-color: #191536;
     color: $text-color;
     border-radius: 4px;
